temporary fix of background image when stretched by tweets

--- a/src/twitter-front-app/src/styles.scss
+++ b/src/twitter-front-app/src/styles.scss
@@ -6,5 +6,7 @@ body
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     background: url('./assets/material-wp1.jpg') no-repeat center center;
-    background-size: cover;
+    // Quand on load les tweets la page stretch et la background image se casse
+    // cette ligne adapte le background à la page
+    background-size: 100% 100%;
 }
